Updated maven compiler to 3.8.1. Added source and resource folder configuration pom. Refactored calling of constructor (because the old way was deprecated)